**📧 Implementazione sistema di gestione contatti via e-mail**
- **Aggiunte principali:**
  - Creazione sistema di contatti per utenti:
    - Endpoint `contacts/index.php` per richieste di informazioni.
    - Template e-mail dinamici: `contact-simple.html` e `contact-product.html` con dettagli utente e prodotto collegato.
    - Validazione lato server per i campi obbligatori.
  - Integrazione libreria `PHPMailer` (v6.10.0) per l'invio delle e-mail:
    - Configurazione SMTP personalizzabile in `config.php`.
    - Fallback con supporto a PHP `mail()` per configurazioni senza SMTP.
  - Aggiunta autoload per classi helper (`autoload.function.php`) e creazione helpers:
    - `NavBarHelper` per verificare la pagina attiva.
    - `CartsHelper` per la gestione del carrello (rimozione, aggiunta, conteggio prodotti).

- **Modifiche:**
  - Rifattorizzazione codice e inclusioni:
    - Ottimizzate navbar e riferimenti helper nel layout.
    - Rimozione funzioni duplicate in favore di classi helper (`CartsHelper`, `NavBarHelper`).
  - Aggiornamento di `composer.json` e `composer.lock` con dipendenza `phpmailer/phpmailer` e requisiti estensioni `ext-pdo`, `ext-intl`.

- **Impatto:**
  - Introduzione di una funzionalità completa per interazioni via e-mail con miglioramento della comunicazione utente.
  - Riduzione del codice duplicato migliorando la manutenibilità grazie agli helper.

- **Note tecniche:**
  - Dipendenza PHPMailer gestita tramite Composer.
  - Template modulari per future personalizzazioni e localizzazioni.

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "fakerphp/faker": "^1.24",
         "snlbaral/faker-ecommerce": "^2.0",
         "ext-pdo": "*",
-        "ext-intl": "*"
+        "ext-intl": "*",
+        "phpmailer/phpmailer": "^6.10"
     }
 }
