--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
-        "fakerphp/faker": "^1.24",
-        "snlbaral/faker-ecommerce": "^2.0",
-        "ext-pdo": "*",
         "ext-intl": "*",
-        "phpmailer/phpmailer": "^6.10"
+        "ext-pdo": "*",
+        "fakerphp/faker": "^1.24",
+        "phpmailer/phpmailer": "^6.10",
+        "snlbaral/faker-ecommerce": "^2.0"
     }
 }
